# kafka-test-rs

./: Cargo.toml  Makefile  README.md  docker-compose.yml  todo.md
docs/: core.md  lessons.md  usecases.md
src/: lib.rs
src/tests/: core_functionality.rs  error_handling.rs  mod.rs  monitoring.rs  performance.rs  test_low_producers.rs  test_transactions.rs  test_utils.rs  utils.rs
src/tests/common/: mod.rs
