[package]
name = "kafka-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { version = "0.37.0", features = ["cmake-build", "ssl", "tracing"] }
rdkafka-sys = { version = "4.7.0" }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
serde_json = "1.0"
md5 = "0.7"
maplit = "1.0"

[dev-dependencies]
tokio-test = "0.4" 